# MpRpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: Makefile  cmake_install.cmake  friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  Makefile  cmake_install.cmake  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
src/: CMakeLists.txt  Makefile  cmake_install.cmake  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  rpcheader.pb.h  rpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
